--- a/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.mdx
+++ b/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.mdx
@@ -1,7 +1,6 @@
 import { ArgTypes, Markdown, Meta } from '@storybook/blocks';
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
 import * as FullPageErrorStories from './full-page-error.stories';
-import CDSFullPageError from './full-page-error';
 
 <Meta of={FullPageErrorStories} />
 
@@ -37,5 +36,7 @@ import '@carbon/ibm-products-web-components/es/components/full-page-error/index.
   <a class="cds--link" href="#">– Forwarding link 2</a>
 </c4p-full-page-error>
 ```
+
+## `<c4p-full-page-error>` attributes, properties and events
 
 <ArgTypes of="c4p-full-page-error" />
