fix(useravatar): doc updation review change

--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.mdx
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.mdx
@@ -45,7 +45,7 @@ import '@carbon/ibm-products-web-components/es/components/user-avatar/index.js';
 ```
 
 ### With Icon
-An icon can be passed as a slot in `<c4p-user-avatar>` using `{ slot: 'rendericon' }`.
+A carbon icon can be passed as a slot in `<c4p-user-avatar>` using `{ slot: 'rendericon' }`. For a custom icon, specify the slot by adding the `slot="rendericon"` attribute to the element.
 ```html
  <c4p-user-avatar
   name= 'Thomas J. Watson'
