--- a/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.mdx
+++ b/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.mdx
@@ -10,6 +10,11 @@ Display a full-page error when the requested page is unavailable to the user.
 This is typically caused by issues with the requested URL or access permissions.
 Errors caused by server connectivity issues are not covered in this guideline.
 
+> 💡 Check our
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/full-page-error)
+> example implementation.
+> [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/full-page-error)
+
 ## Getting started
 
 Here's a quick example to get you started.
