--- a/packages/ibm-products/src/components/BigNumber/BigNumber.mdx
+++ b/packages/ibm-products/src/components/BigNumber/BigNumber.mdx
@@ -1,9 +1,9 @@
 import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
-import { BigNumbers } from '.';
-import * as BigNumbersStories from './BigNumbers.stories';
+import { BigNumber } from '.';
+import * as BigNumberStories from './BigNumber.stories';
 
-# BigNumbers
+# BigNumber
 
 ## Table of Contents
 
@@ -13,8 +13,8 @@ import * as BigNumbersStories from './BigNumbers.stories';
 
 ## Overview
 
-BigNumbers is used to display large values in a small area. The display of
-values can be the value itself, or grouped in a `numerator/denominator` fashion.
+BigNumber is used to display large values in a small area. The display of values
+can be the value itself, or grouped in a `numerator/denominator` fashion.
 Control over the total fraction decimals displayed as well as how the
 values/totals are displayed are done via a locale prop. Other optional props
 allow control over size, truncation, if the value is a percentage, the addition
@@ -30,7 +30,7 @@ of a button as well as tool tip functionality. The default locale is English
 ### Big numbers
 
 <Canvas>
-  <Story of={BigNumbersStories.bigNumbers} />
+  <Story of={BigNumberStories.bigNumber} />
 </Canvas>
 
 ## Code sample
