--- a/packages/ibm-products/src/global/js/utils/makeDraggable/makeDraggable.mdx
+++ b/packages/ibm-products/src/global/js/utils/makeDraggable/makeDraggable.mdx
@@ -13,13 +13,13 @@ import * as makeDraggableStories from './makeDraggable.stories';
 ## Overview
 
 The `makeDraggable` utility enables an HTML element to be draggable using either mouse or keyboard interactions. 
-It allows developers to specify a optional drag handle (e.g., a header) and focusable element (e.g., an icon) within the handle to support accessibility.
+It allows developers to specify a optional drag handle (e.g., a header), focusable element (e.g., an icon) within the handle to support accessibility and an optional pixel value that defines the distance to move when dragging with arrow keys (default: 8px) and shift arrow keys (default: 32px).
 
 ## Example usage
 
 
 ```jsx
-makeDraggable( dialogRef.current, headerRef.current, dragRef.current)
+makeDraggable({ el:dialogRef.current, handle:headerRef.current, focusableInHandle:dragRef.current})
 ```
 
 ## Example implementation
