--- a/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen.mdx
+++ b/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen.mdx
@@ -6,6 +6,10 @@ import * as interstitialStories from './interstitial-screen.stories';
 
 # InterstitialScreen
 
+> 💡 Check our
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/interstitial-screen)
+> example implementation.
+
 [Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/usage)
 
 
