--- a/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
+++ b/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
@@ -13,52 +13,26 @@ import * as StepFlowStories from './StepFlow.stories';
 The step flow utility can be used to compose stepping experiences across any variation of components. This utility allows for stepping as commonly seen in the `CreateTearsheet` and `CreateFullPage` components, but through a more composable and headless delivery. This allows for the flexibility to incorporate stepped experiences within any component.
 
 Included assets:
-- `StepContext`
+- `StepProvider`
 - `useStepContext`
 - `StepGroup`, handles rendering of step components so _only_ the current step is in the DOM
 - `StepActions`, optional headless component that returns state via render prop `buttonRenderer`
 
 ## Example usage
 
-Wrap your stepped component in the `StepContext` provider and initialize context values.
-```tsx
-const SteppedPanel = () => {
-  const [numSteps, setNumSteps] = useState<number>();
-  const [currentStep, setCurrentStep] = useState(1);
-  const [formState, setFormState] = useState({});
-
-  const context: StepStateType = {
-    formState,
-    setFormState,
-    numSteps,
-    setNumSteps,
-    currentStep,
-    handleGoToStep: (step) => setCurrentStep(step),
-    handleNext: () => setCurrentStep((step) => step + 1),
-    handlePrevious: () => setCurrentStep((step) => step - 1),
-  };
-
-  return <StepContext.Provider value={context}>
-    <SidePanel>
-      {children}
-    <SidePanel>
-  </StepContext.Provider>
-}
-```
-
-Use `<StepGroup>` and step components with your new step enabled side panel component. Any content outside of the `<StepGroup>` will render on every step.
+Wrap your stepped component in the `StepProvider` from the utility. Use `<StepGroup>` and step components with your new step enabled side panel component. Any content outside of the `<StepGroup>` will render on every step.
 ```tsx
 const Example = () => {
-  return <SteppedPanel>
+  return <StepProvider>
     <StepGroup>
       <Step1 />
       <Step2 />
       {someCondition && <ConditionalStep />}
     </StepGroup>
-  </SteppedPanel>
+  </StepProvider>
 }
 ```
-Any component inside of the stepped enabled component can use `useStepContext()` to retrieve the step context state, giving the ability to get and set the state.
+Any component inside of the step enabled component (`StepProvider`) can use `useStepContext()` to retrieve the step context state, giving the ability to get and set the state.
 ```tsx
 const Step1 = () => {
   const { setFormState, formState } = useStepContext();
@@ -75,6 +49,27 @@ const Step1 = () => {
       }}
     />
   )
+}
+```
+
+Step state (returned from `useStepContext`):
+```ts
+// This interface should be extended by the consumer to match
+// their own unique use case given the fields within their
+// own stepped experience
+interface formStateType {
+  [key: string]: any;
+}
+
+export interface StepState {
+  formState: formStateType;
+  setFormState: Dispatch<SetStateAction<formStateType>>;
+  totalSteps: number | undefined;
+  setTotalSteps: Dispatch<SetStateAction<number | undefined>>;
+  currentStep: number;
+  handleGoToStep: (a: number) => void;
+  handleNext: () => void;
+  handlePrevious: () => void;
 }
 ```
 <Canvas of={StepFlowStories.tearsheetWithSteps} />
